Bundle Re-ordering